fix: more consisten title spacing

--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,7 @@ ul {
     margin: 6px;
     grid-area: title;
     font-size: 1rem;
+    margin-bottom: auto;
 }
 
 .details {
